Bug 486330 - Wrong KNewStuff URI
Summary: Wrong KNewStuff URI
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: KNewStuff Backend (other bugs)
Version First Reported In: 6.0.4
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 485542 486237 486709 486711 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-04-30 08:34 UTC by f.o.akhmetov
Modified: 2024-05-27 08:52 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.5
Sentry Crash Report:


Attachments
DEB_list.txt (395.78 KB, text/plain)
2024-05-09 07:31 UTC, Dariusz Tereszkiewicz
Details
win_info.txt (2 bytes, text/plain)
2024-05-09 07:31 UTC, Dariusz Tereszkiewicz
Details
win_info.txt (6.64 KB, text/plain)
2024-05-09 07:41 UTC, Dariusz Tereszkiewicz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description f.o.akhmetov 2024-04-30 08:34:47 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY
Wrong KNewStuff URI: kns://icons.knsrc//1686927 after update to Fedora 40 and Plasma 6

STEPS TO REPRODUCE
1. Open Discover app
2. Select Plasma Addons
3. Select any addon 

OBSERVED RESULT
Wrong KNewStuff URI for any Plasma addon excluding fonts category

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION
Comment 1 Titouan Camus 2024-04-30 10:57:13 UTC
I can reproduce. 

Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.5.0-28-generic (64-bit)
Graphics Platform: Wayland
Comment 2 Bug Janitor Service 2024-04-30 12:18:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/828
Comment 3 Titouan Camus 2024-05-01 09:53:27 UTC
*** Bug 486237 has been marked as a duplicate of this bug. ***
Comment 4 Harald Sitter 2024-05-03 11:54:52 UTC
*** Bug 485542 has been marked as a duplicate of this bug. ***
Comment 5 Harald Sitter 2024-05-07 09:43:23 UTC
*** Bug 486709 has been marked as a duplicate of this bug. ***
Comment 6 Harald Sitter 2024-05-08 16:27:56 UTC
Git commit bbb16107045633a5950e298fd807ce3d68dd9322 by Harald Sitter.
Committed on 08/05/2024 at 16:24.
Pushed by sitter into branch 'master'.

kns: drop provider part of the url

supposedly in 6.7 the parsing changed a bit and now certain providerIds
parse as path rather than host. the host component extraction was super
questionable anyway because it means you can't get to the providerId
from the url, rendering the provider part entirely pointless.

fortunately the provider part wasn't used anyway so we can simplify the
url and not include the provider at all

M  +3    -4    libdiscover/backends/KNSBackend/KNSBackend.cpp
M  +1    -1    libdiscover/backends/KNSBackend/KNSResource.cpp

https://invent.kde.org/plasma/discover/-/commit/bbb16107045633a5950e298fd807ce3d68dd9322
Comment 7 Harald Sitter 2024-05-08 16:34:13 UTC
Git commit 5f8c3f52174541825b23c75e374ab2b86cb538cd by Harald Sitter.
Committed on 08/05/2024 at 16:30.
Pushed by sitter into branch 'Plasma/6.0'.

kns: drop provider part of the url

supposedly in 6.7 the parsing changed a bit and now certain providerIds
parse as path rather than host. the host component extraction was super
questionable anyway because it means you can't get to the providerId
from the url, rendering the provider part entirely pointless.

fortunately the provider part wasn't used anyway so we can simplify the
url and not include the provider at all


(cherry picked from commit bbb16107045633a5950e298fd807ce3d68dd9322)

M  +3    -4    libdiscover/backends/KNSBackend/KNSBackend.cpp
M  +1    -1    libdiscover/backends/KNSBackend/KNSResource.cpp

https://invent.kde.org/plasma/discover/-/commit/5f8c3f52174541825b23c75e374ab2b86cb538cd
Comment 8 Dariusz Tereszkiewicz 2024-05-09 07:31:08 UTC
Created attachment 169335 [details]
DEB_list.txt

Hi,

Maybe one more hint. I have attached a list of the DEB packages that are
installed.
Maybe there is too much or the wrong version.

After a clean installation of Plasma6, there was a problem with the nvidia
drivers, the installer did not notice that I had an nvidia 1050ti card.
I had to manually install drivers.
Below is short information about my system and information about windows in
the attachment.

Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.5.0-28-generic (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-2400 CPU @ 3.10GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2
Manufacturer: MSI
Product Name: MS-7681
System Version: 1.0/2.0


śr., 8 maj 2024 o 18:34 Harald Sitter <bugzilla_noreply@kde.org> napisał(a):

> https://bugs.kde.org/show_bug.cgi?id=486330
>
> Harald Sitter <sitter@kde.org> changed:
>
>            What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>       Latest Commit|https://invent.kde.org/plas |
> https://invent.kde.org/plas
>                    |ma/discover/-/commit/bbb161
> |ma/discover/-/commit/5f8c3f
>                    |07045633a5950e298fd807ce3d6
> |52174541825b23c75e374ab2b86
>                    |8dd9322                     |cb538cd
>
> --- Comment #7 from Harald Sitter <sitter@kde.org> ---
> Git commit 5f8c3f52174541825b23c75e374ab2b86cb538cd by Harald Sitter.
> Committed on 08/05/2024 at 16:30.
> Pushed by sitter into branch 'Plasma/6.0'.
>
> kns: drop provider part of the url
>
> supposedly in 6.7 the parsing changed a bit and now certain providerIds
> parse as path rather than host. the host component extraction was super
> questionable anyway because it means you can't get to the providerId
> from the url, rendering the provider part entirely pointless.
>
> fortunately the provider part wasn't used anyway so we can simplify the
> url and not include the provider at all
>
>
> (cherry picked from commit bbb16107045633a5950e298fd807ce3d68dd9322)
>
> M  +3    -4    libdiscover/backends/KNSBackend/KNSBackend.cpp
> M  +1    -1    libdiscover/backends/KNSBackend/KNSResource.cpp
>
>
> https://invent.kde.org/plasma/discover/-/commit/5f8c3f52174541825b23c75e374ab2b86cb538cd
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 9 Dariusz Tereszkiewicz 2024-05-09 07:31:09 UTC
Created attachment 169336 [details]
win_info.txt
Comment 10 Dariusz Tereszkiewicz 2024-05-09 07:41:56 UTC
Created attachment 169337 [details]
win_info.txt

Correction,

I am attaching the correct win_info.txt file.

czw., 9 maj 2024 o 09:30 Dariusz Tereszkiewicz <
dariusz.tereszkiewicz@gmail.com> napisał(a):

> Hi,
>
> Maybe one more hint. I have attached a list of the DEB packages that are
> installed.
> Maybe there is too much or the wrong version.
>
> After a clean installation of Plasma6, there was a problem with the nvidia
> drivers, the installer did not notice that I had an nvidia 1050ti card.
> I had to manually install drivers.
> Below is short information about my system and information about windows
> in the attachment.
>
> Operating System: KDE neon 6.0
> KDE Plasma Version: 6.0.4
> KDE Frameworks Version: 6.1.0
> Qt Version: 6.7.0
> Kernel Version: 6.5.0-28-generic (64-bit)
> Graphics Platform: X11
> Processors: 4 × Intel® Core™ i5-2400 CPU @ 3.10GHz
> Memory: 15.6 GiB of RAM
> Graphics Processor: NVIDIA GeForce GTX 1050 Ti/PCIe/SSE2
> Manufacturer: MSI
> Product Name: MS-7681
> System Version: 1.0/2.0
>
>
> śr., 8 maj 2024 o 18:34 Harald Sitter <bugzilla_noreply@kde.org>
> napisał(a):
>
>> https://bugs.kde.org/show_bug.cgi?id=486330
>>
>> Harald Sitter <sitter@kde.org> changed:
>>
>>            What    |Removed                     |Added
>>
>> ----------------------------------------------------------------------------
>>       Latest Commit|https://invent.kde.org/plas |
>> https://invent.kde.org/plas
>>                    |ma/discover/-/commit/bbb161
>> |ma/discover/-/commit/5f8c3f
>>                    |07045633a5950e298fd807ce3d6
>> |52174541825b23c75e374ab2b86
>>                    |8dd9322                     |cb538cd
>>
>> --- Comment #7 from Harald Sitter <sitter@kde.org> ---
>> Git commit 5f8c3f52174541825b23c75e374ab2b86cb538cd by Harald Sitter.
>> Committed on 08/05/2024 at 16:30.
>> Pushed by sitter into branch 'Plasma/6.0'.
>>
>> kns: drop provider part of the url
>>
>> supposedly in 6.7 the parsing changed a bit and now certain providerIds
>> parse as path rather than host. the host component extraction was super
>> questionable anyway because it means you can't get to the providerId
>> from the url, rendering the provider part entirely pointless.
>>
>> fortunately the provider part wasn't used anyway so we can simplify the
>> url and not include the provider at all
>>
>>
>> (cherry picked from commit bbb16107045633a5950e298fd807ce3d68dd9322)
>>
>> M  +3    -4    libdiscover/backends/KNSBackend/KNSBackend.cpp
>> M  +1    -1    libdiscover/backends/KNSBackend/KNSResource.cpp
>>
>>
>> https://invent.kde.org/plasma/discover/-/commit/5f8c3f52174541825b23c75e374ab2b86cb538cd
>>
>> --
>> You are receiving this mail because:
>> You are on the CC list for the bug.
>
>
>
> --
> Dariusz Tereszkiewicz
>
Comment 11 Nate Graham 2024-05-09 19:43:47 UTC
*** Bug 486711 has been marked as a duplicate of this bug. ***